added proper working files

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index hm</title>
+    <title>Document</title>
 </head>
 <body>
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi recusandae nam quasi officia minima earum voluptatem culpa, suscipit asperiores vero eaque ipsam! Ipsa laboriosam iure ad corporis laborum temporibus soluta.
-    Ullam eius adipisci, mollitia nostrum esse omnis voluptatem rerum, cum vel officiis magnam saepe doloribus repellat hic. Vero itaque quia vel nesciunt voluptate nulla quos, ipsa quod, ut et dicta.
-    <%= text + 2 %>
-    
+    To check if this workssss
 </body>
 </html>
