works good till now

--- a/views/EachMovie.ejs
+++ b/views/EachMovie.ejs
@@ -138,7 +138,6 @@ body{
 
 
         <div id="intro">
-
         </div>
         <div class="container">
             <div class="col-lg-3 col-md-3 leftside">
@@ -204,8 +203,14 @@ body{
                 </div>
             </div>
         </div>  
-    
+        
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+         <iframe style = "margin-left: 40px;" width="750" height="400" src=<%= movieYoutubeLink %>>
+        </iframe>
 
         <script src="" async defer></script>
     </body>
+
+
+    <br><br><br><br><br><br><br><br><br><br>
 </html>
