--- a/views/search.ejs
+++ b/views/search.ejs
@@ -140,67 +140,60 @@ footer{
 </div>
 
 <section id="headerandstuff">
-  <p style="font-size: 50px; padding-top: 100px; text-align: center; color: #9ABBCC;">Search results for " "</p>
+  
   <!-- <p style="color: #9ABBCC; text-align: center;">films that are surreal, dreamy, and just a little bit weird
     suggestions welcome!</p> -->
   <!-- <p style="text-align: center; color: #9ABBCC;"><u> <a href="../../profile-page/profile-page.html"> List by Lucy</a></u> </p> -->
   
 </section>
-
     <section id="movie-list" style="padding-top: 50px;">
                 <div style="margin-left: 5%;" class="card">
-                    <img src="images/coherence.jpg" class="card-img" alt="...">
+                    <a href="http://localhost:3000/film?id=<%=arrayOfID[0] %>">
+                        <img src= <%= storeMovie[arrayOfID[0]]  %>  class="card-img" alt="...">
+                    </a>
                 </div>
                 <div class="card">
-                    <img src="images/get-out.jpg" class="card-img" alt="...">
+                    <a href="http://localhost:3000/film?id=<%=arrayOfID[1] %>">
+                        <img src= <%= storeMovie[arrayOfID[1]]  %>  class="card-img" alt="...">
+                    </a>
                 </div>
                 <div class="card">
-                    <img src="images/eternal.jpg" class="card-img" alt="...">
+                    <a href="http://localhost:3000/film?id=<%=arrayOfID[2] %>">
+                        <img src= <%= storeMovie[arrayOfID[2]]  %>  class="card-img" alt="...">
+                    </a>
                 </div>
                 <div class="card">
-                    <img src="images/fight-club.jpg" class="card-img" alt="...">
+                    <a href="http://localhost:3000/film?id=<%=arrayOfID[3] %>">
+                        <img src= <%= storeMovie[arrayOfID[3]]  %>  class="card-img" alt="...">
+                    </a>
                 </div>
 
                 <div class="card" style="margin-left: 5%;">
-                    <img src="images/drive.jpg" class="card-img" alt="...">
+                    <a href="http://localhost:3000/film?id=<%=arrayOfID[4] %>">
+                        <img src= <%= storeMovie[arrayOfID[4]]  %>  class="card-img" alt="...">
+                    </a>
                 </div>
 
                 <div class="card">
-                    <img src="images/dunkirk.jpg" class="card-img" alt="...">
+                    <a href="http://localhost:3000/film?id=<%=arrayOfID[5] %>">
+                        <img src= <%= storeMovie[arrayOfID[5]]  %>  class="card-img" alt="...">
+                    </a>
                 </div>
                 <div class="card">
-                    <img src="images/alien-3.jpg" class="card-img" alt="...">
+                    <a href="http://localhost:3000/film?id=<%=arrayOfID[6] %>">
+                        <img src= <%= storeMovie[arrayOfID[6]]  %>  class="card-img" alt="...">
+                    </a>
                 </div>
                 <div class="card">
-                    <img src="images/kimi.jpg" class="card-img" alt="...">
+                    <a href="http://localhost:3000/film?id=<%=arrayOfID[7] %>">
+                        <img src= <%= storeMovie[arrayOfID[7]]  %>  class="card-img" alt="...">
+                    </a>
                 </div>
-
-                <div class="card" style="margin-left: 5%;">
-                    <img src="images/tenet.jpg" class="card-img" alt="...">
-                </div>
-
-                <div class="card">
-                    <img src="images/social-network.jpg" class="card-img" alt="...">
-                </div>         
+                   
     </section>
 
 </body>
-
-
-
-
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
-
-
-
-
-
-
-
-
+<div style="padding: 500px;"><p>lorem</p></div>
 <footer class="white-section" id="footer">
   <div class="container-fluid">
     <i class="social-icon icon fab fa-facebook-f"></i>
