--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -108,7 +108,7 @@ img{
             <div class="container">
         
             <!-- Navbar brand -->
-            <a class="navbar-brand" href="../homepage/homepage.html" style="color: #9ABBCC;">MOVIE SITE</a>
+            <a class="navbar-brand" href="http://localhost:3000/homepage" style="color: #9ABBCC;">MOVIE SITE</a>
                 <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="../Sign-Up/Sign-up.html" style="color: #9ABBCC;">SIGN UP
