--- a/views/popFilm.ejs
+++ b/views/popFilm.ejs
@@ -183,7 +183,7 @@ footer{
         
         <div class="navi">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">                
-                <a style="margin-left: 15%;" class="navbar-brand" href=""><i class="head-icon fas fa-film"></i>    CINEFLIX</a>
+                <a style="margin-left: 15%;" class="navbar-brand" href="http://localhost:3000/homepage"><i class="head-icon fas fa-film"></i>CINEFLIX</a>
         
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
                     <span class="navbar-toggler-icon"></span>
