--- a/views/EachMovie.ejs
+++ b/views/EachMovie.ejs
@@ -113,7 +113,7 @@ body{
             <div class="container">
         
             <!-- Navbar brand -->
-            <a class="navbar-brand" href="../homepage/homepage.html" style="color: #9ABBCC;">MOVIE SITE</a>
+            <a class="navbar-brand" href="http://localhost:3000/homepage" style="color: #9ABBCC;">MOVIE SITE</a>
             <a class="nav-link" href="../Sign-Up/Sign-up.html" style="color: #9ABBCC; margin-left: -380px;">SIGN UP</a>
                 <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
