--- a/views/popFilm.ejs
+++ b/views/popFilm.ejs
@@ -195,10 +195,12 @@ footer{
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" 
                         data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="fas fa-user"></i>   USERNAME
+                        <i class="fas fa-user"></i>   USER
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Home</a></li>
+
+                            
+                            <li><a class="dropdown-item" href="http://localhost:3000/homepage">Home</a></li>
                             <li><a class="dropdown-item" href="#">Profile</a></li>
                             <li><a class="dropdown-item" href="#">Diary</a></li>
                             <li><a class="dropdown-item" href="#">Reviews</a></li>
@@ -206,7 +208,7 @@ footer{
                         </ul>
                     </li>  
                     <li class="nav-item">
-                      <a class="nav-link" href="#">FILMS</a>
+                      <a class="nav-link" href="localhost:3000/popFilm">FILMS</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">LIST</a>
