--- a/views/popFilm.ejs
+++ b/views/popFilm.ejs
@@ -195,12 +195,10 @@ footer{
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" 
                         data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="fas fa-user"></i>   USER
+                        <i class="fas fa-user"></i>   USERNAME
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-
-                            
-                            <li><a class="dropdown-item" href="http://localhost:3000/homepage">Home</a></li>
+                            <li><a class="dropdown-item" href="#">Home</a></li>
                             <li><a class="dropdown-item" href="#">Profile</a></li>
                             <li><a class="dropdown-item" href="#">Diary</a></li>
                             <li><a class="dropdown-item" href="#">Reviews</a></li>
@@ -208,7 +206,7 @@ footer{
                         </ul>
                     </li>  
                     <li class="nav-item">
-                      <a class="nav-link" href="localhost:3000/popFilm">FILMS</a>
+                      <a class="nav-link" href="#">FILMS</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">LIST</a>
@@ -435,7 +433,7 @@ footer{
                                 <i class="icon fas fa-user-circle fa-2x"></i>
                             </div>
                             <div style="float: left;" class="reviewer-content">
-                                <p class="reviewer-info">karlston <br> <span class="side-review reviewer-info">1540 films,1146 reviews</span>  </p>
+                                <p class="reviewer-info">Max <br> <span class="side-review reviewer-info">960 films,354 reviews</span>  </p>
                                 <!-- <hr> -->
                             </div>
                             <div class="follow-icon">
@@ -451,7 +449,7 @@ footer{
                                 <i class="icon fas fa-user-circle fa-2x"></i>
                             </div>
                             <div style="float: left;" class="reviewer-content">
-                                <p class="reviewer-info">karlston <br> <span class="side-review reviewer-info">1540 films,1146 reviews</span>  </p>
+                                <p class="reviewer-info">Will Bright <br> <span class="side-review reviewer-info">580 films,678 reviews</span>  </p>
                                 <!-- <hr> -->
                             </div>
                             <div class="follow-icon">
@@ -467,7 +465,7 @@ footer{
                                 <i class="icon fas fa-user-circle fa-2x"></i>
                             </div>
                             <div style="float: left;" class="reviewer-content">
-                                <p class="reviewer-info">karlston <br> <span class="side-review reviewer-info">1540 films,1146 reviews</span>  </p>
+                                <p class="reviewer-info">Willington Jr <br> <span class="side-review reviewer-info">890 films,1279 reviews</span>  </p>
                                 <!-- <hr> -->
                             </div>
                             <div class="follow-icon">
